# sentinel-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
sentinelapex/: __init__.py  cli.py  config.py  logger.py  models.py  security.py
sentinelapex/core/: __init__.py  engine.py  history.py  tokens.py
sentinelapex/providers/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  generic_rest.py  ollama_adapter.py  openai_adapter.py  registry.py
sentinelapex/ui/: __init__.py  banner.py  console.py  prompts.py  wizard.py
sentinelapex/utils/: __init__.py  downloader.py  file_io.py  retry.py
tests/: test_security.py
